plugin/src/main/resources/css/iframe/host.css
.ap-status small {
  color: #707070;
}

.ap-loading, .ap-load-timeout {
  padding-left: 4px;
}

.ap-dialog-content {
  padding: 0 !important;
  overflow: hidden !important;
}

.ap-dialog-content .ap-stats {
  padding: 5px 10px;
  background: #f5f5f5;
  border-top: 1px solid #e9e9e9;
}

.ap-link-disabled, .ap-link-disabled:hover, .ap-link-disabled:visited, .ap-link-disabled:focus {
  color: gray !important;
  text-decoration: none;
}

/* ap-content div has some whitespace in it, which results in the element having
 * a minimum height of ~20px. Setting font-size to 0px should be safe given that
 * the element only contains an iframe. */
.ap-container .ap-content {
  font-size: 0px;
}

.ap-container iframe {
  border: 0;
}

.ap-container iframe.full-size-general-page {
  border-bottom: 1px solid #ccc;
}

.ap-stats .small-spinner {
  width: 20px;
  height: 20px;
  float: left;
  margin-right: 4px;
}

.aui-inline-dialog .ap-stats, .ap-dialog-content .ap-stats {
  display: block;
}

.ap-aui-message {
  margin: 10px;
}

.ap-content {
  line-height: 0;
  margin: 0;
  padding: 0;
  font-size: 0;
}

